<resources>
    <string name="app_name">News</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="latest_news">Latest News</string>
    <string name="business">business</string>
    <string name="entertainment">entertainment</string>
    <string name="general">General</string>
    <string name="health">health</string>
    <string name="science">science</string>
    <string name="sports">sports</string>
    <string name="technology">technology</string>
    <string name="see_all">See All</string>
    <string name="_5_things_you_know_about_the_conudrum_of_the_lupus">5 things you know about the conudrum of the lupus</string>
    <string name="search_about_your_favorite_topic">Search about your favorite topic</string>
    <string name="search_here">Search here</string>
    <string name="filter">Filter</string>
    <string name="favorite">Favorite</string>
    <string name="home">Home</string>
</resources>