<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/basic_padding"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.SearchFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:boxCornerRadiusTopEnd="@dimen/corner_padding"
        app:boxCornerRadiusBottomEnd="@dimen/corner_padding"
        app:boxCornerRadiusTopStart="@dimen/corner_padding"
        app:boxCornerRadiusBottomStart="@dimen/corner_padding">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/search_here" />
    </com.google.android.material.textfield.TextInputLayout>

    <HorizontalScrollView
        android:id="@+id/hs_category_chip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/basic_padding"
        android:scrollbars="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_search">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/cg_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/ch_filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:chipCornerRadius="@dimen/basic_padding"
                app:chipBackgroundColor="@color/bg_chip_state_list"
                android:checked="true"
                android:clickable="true"
                android:checkable="true"
                android:focusable="true"
                android:text="@string/filter" />

            <com.google.android.material.chip.Chip
                android:id="@+id/ch_business"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:chipCornerRadius="@dimen/basic_padding"
                app:chipBackgroundColor="@color/bg_chip_state_list"
                android:clickable="true"
                android:checkable="true"
                android:focusable="true"
                android:text="@string/business" />

            <com.google.android.material.chip.Chip
                android:id="@+id/ch_entertainment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:chipCornerRadius="@dimen/basic_padding"
                android:text="@string/entertainment"
                app:chipBackgroundColor="@color/bg_chip_state_list"
                android:clickable="true"
                android:checkable="true"
                android:focusable="true"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/ch_general"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:chipCornerRadius="@dimen/basic_padding"
                android:text="@string/general"
                app:chipBackgroundColor="@color/bg_chip_state_list"
                android:clickable="true"
                android:checkable="true"
                android:focusable="true"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/ch_health"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:chipCornerRadius="@dimen/basic_padding"
                android:text="@string/health"
                app:chipBackgroundColor="@color/bg_chip_state_list"
                android:clickable="true"
                android:checkable="true"
                android:focusable="true"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/ch_science"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:chipCornerRadius="@dimen/basic_padding"
                android:text="@string/science"
                app:chipBackgroundColor="@color/bg_chip_state_list"
                android:clickable="true"
                android:checkable="true"
                android:focusable="true"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/ch_sports"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:chipCornerRadius="@dimen/basic_padding"
                android:text="@string/sports"
                app:chipBackgroundColor="@color/bg_chip_state_list"
                android:clickable="true"
                android:checkable="true"
                android:focusable="true"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/ch_technology"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:chipCornerRadius="@dimen/basic_padding"
                android:text="@string/technology"
                app:chipBackgroundColor="@color/bg_chip_state_list"
                android:clickable="true"
                android:checkable="true"
                android:focusable="true"/>
        </com.google.android.material.chip.ChipGroup>

    </HorizontalScrollView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_search"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@id/hs_category_chip"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="gone"
        android:indeterminateTintMode="src_atop"
        android:indeterminateTint="@color/md_theme_light_primary"
        app:layout_constraintTop_toBottomOf="@id/hs_category_chip"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>